fix profile pics getting cut off

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-5/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-5/_toolbars.scss
@@ -379,11 +379,11 @@
         }
     }
 
-	&[profilepic="disabled"] {
-		#fxa-toolbar-menu-button {
-			display: none !important;
-		}
-	}
+    &[profilepic="disabled"] {
+        #fxa-toolbar-menu-button {
+            display: none !important;
+        }
+    }
 
     &:not([profilepic="firefox"]) {
         #fxa-toolbar-menu-button {
@@ -475,7 +475,7 @@
         }
 
         #browser,
-		#customization-container {
+        #customization-container {
             box-shadow: 0 !important;
             border: none;
             margin: 0;
@@ -737,7 +737,7 @@ toolbar[overflowable][customizing] > .customization-target {
     .toolbarbutton-icon {
         width: auto !important;
         height: auto !important;
-		max-height: 19px !important;
+        max-height: 19px !important;
     }
 
     .toolbarbutton-badge-stack {
@@ -801,14 +801,14 @@ toolbar[overflowable][customizing] > .customization-target {
 
     &#unified-extensions-button,
     &#PanelUI-menu-button,
-	&[class*="webextension"] {
+    &[class*="webextension"] {
         border: 0 !important;
         background: transparent !important;
         transition: background-color 100ms linear;
-		
-		&:not([class*="webextension"]) {
-			width: var(--toolbarbutton-menu-width) !important;
-		}
+
+        &:not([class*="webextension"]) {
+            width: var(--toolbarbutton-menu-width) !important;
+        }
 
         &::after,
         &::before {
@@ -837,11 +837,11 @@ toolbar[overflowable][customizing] > .customization-target {
 }
 
 .toolbaritem-combined-buttons {
-	margin-inline: 0 !important;
+    margin-inline: 0 !important;
 
-	> separator {
-		display: none !important;
-	}
+    > separator {
+        display: none !important;
+    }
 }
 
 #fxa-toolbar-menu-button {
@@ -854,7 +854,7 @@ toolbar[overflowable][customizing] > .customization-target {
 
     .toolbarbutton-badge-stack {
         background: transparent !important;
-        margin-block-end: 7px;
+        margin-block-end: 11px;
     }
 
     .toolbarbutton-badge-stack > vbox,
