--- a/Profile Folder/chrome/userChrome.css
+++ b/Profile Folder/chrome/userChrome.css
@@ -1781,7 +1781,7 @@ toolbar[overflowable][customizing] > .customization-target {
 }
 #fxa-toolbar-menu-button .toolbarbutton-badge-stack {
   background: transparent !important;
-  margin-block-end: 7px;
+  margin-block-end: 11px;
 }
 #fxa-toolbar-menu-button .toolbarbutton-badge-stack > vbox,
 #fxa-toolbar-menu-button .toolbarbutton-badge-stack > vbox > #fxa-avatar-image {
